@@ -43,16 +43,18 @@ typedef struct {
 } NautilusFileChangesQueuePosition;
 
 /* Almost-public change notification calls */
-void nautilus_directory_notify_files_added_by_location (GList *files);
-void nautilus_directory_notify_files_added       (GList        *uris);
-void nautilus_directory_notify_files_changed     (GList        *uris);
-void nautilus_directory_notify_files_moved_by_location (GList        *file_pairs);
-void nautilus_directory_notify_files_moved       (GList        *uri_pairs);
-void nautilus_directory_notify_files_removed     (GList        *uris);
-void nautilus_directory_schedule_metadata_copy   (GList        *uri_pairs);
-void nautilus_directory_schedule_metadata_move   (GList        *uri_pairs);
-void nautilus_directory_schedule_metadata_remove (GList        *uris);
-void nautilus_directory_schedule_position_set    (GList        *position_setting_list);
+void nautilus_directory_notify_files_added (GList *files);
+void nautilus_directory_notify_files_moved (GList *file_pairs);
+
+/* Deprecated URI versions: to be converted */
+void nautilus_directory_notify_files_added_by_uri      (GList        *uris);
+void nautilus_directory_notify_files_changed_by_uri    (GList        *uris);
+void nautilus_directory_notify_files_moved_by_uri      (GList        *uri_pairs);
+void nautilus_directory_notify_files_removed_by_uri    (GList        *uris);
+void nautilus_directory_schedule_metadata_copy_by_uri   (GList        *uri_pairs);
+void nautilus_directory_schedule_metadata_move_by_uri   (GList        *uri_pairs);
+void nautilus_directory_schedule_metadata_remove_by_uri (GList        *uris);
+void nautilus_directory_schedule_position_set_by_uri    (GList        *position_setting_list);
 
 /* Change notification hack.
  * This is called when code modifies the file and it needs to trigger
