@@ -1,5 +1,15 @@
 2007-09-20  Alexander Larsson  <alexl@redhat.com>
 
+        * libnautilus-private/nautilus-directory-notify.h:
+        * libnautilus-private/nautilus-directory.c:
+        * libnautilus-private/nautilus-file-changes-queue.c:
+        * libnautilus-private/nautilus-link-desktop-file.c:
+        * libnautilus-private/nautilus-merged-directory.c:
+	Rename notify functions that work on uris to _by_uri and
+	the GFile ones to have no suffix
+
+2007-09-20  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-metafile.c: 
         * libnautilus-private/nautilus-directory.[ch]:
 	Remove unused function nautilus_directory_make_uri_canonical
